fixed overflow issues with flex containers

--- a/styles.css
+++ b/styles.css
@@ -13,15 +13,19 @@ body {
     display: flex;
     background-color: #1f2937;
     color: white;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
-    gap: 870px;
-    padding-bottom: 100px;
+    height: 75px;
+    /* flex: 1; */
+    border: 2px limegreen solid;
+    padding: 5px 50px;
 }
 
 .logo {
-    height: 60px;
-    width: 60px;   
+     height: 60px; 
+    /* width: 60px; */
+    border: 2px red solid;
+    margin: 0;   
 }
 
 .links, li {
@@ -31,9 +35,12 @@ body {
     gap: 30px;
     flex-direction: row;
     text-decoration: none;
+    border: 2px red solid;
+    height: 60px;
+    
 }
 
-.links, a:hover {
+a:hover {
     color: rgb(86, 238, 70)
 }
 
@@ -45,38 +52,58 @@ li, a {
 
 .container-two {
     display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
     background-color:#1f2937;
-    height: 250px;
-    justify-content: center;
-    gap: 200px;
+    min-height: 250px;
+    justify-content: space-evenly;
     align-items: center;
+    gap: 5px;
+    margin: 0 auto;
+    border-bottom: 4px rgb(188, 183, 183) solid;
 }
 
-.container-two > div {
-    width: 400px;
+.container-two > * {
+    width: 350px;
+    
 }
 
-.cont-left {
-    text-align: left;
-    padding-right: 30px;  
-}
+/*.second {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: 2px red solid;
+    justify-content: center;
+} */
 
-h1 {
+.second > .tigerbird {
+    min-width: 0;
+    max-width: 350px;
+    min-height: 0;
+    border-radius: 8px;
+} 
+
+ /*.cont-left {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 75px; } */
+
+ h1 {
     color: white;
     font-size: 48px;
-    font-weight: bolder;
-}
+    font-weight: extra-bold;
+    width: 400px;
+} 
 
-.cont-right {
-    display: flex;
-}
+ /*.cont-right {
+    max-width: 200px;
 
-.tigerbird {
-    width: 370px;
-    min-height: 0;
-    margin-bottom: 25px;
-    border-radius: 10px;
-}
+/*.tigerbird {
+    width: 100px;
+    height: 200px;
+} */
 
 p {
     color: rgb(188, 183, 183); 
@@ -98,11 +125,12 @@ h2 {
 
 .container-three {
     display: flex;
-    height: 350px;
+    min-height: 350px;
     justify-content: center;
     gap: 100px;
     align-items: center;
     flex-wrap: wrap;
+    border: 2px red solid;
 }
 
 .picture {
@@ -110,11 +138,13 @@ h2 {
     width: 250px;
     height: 150px;
     border-radius: 8px;
-    margin-bottom: 15px;
+    margin-bottom: 15px; 
 }
 
 .box {
-    
+    width: 250px;
+    min-height: 150px;
+    flex: 1;
     text-align: center;
 }
 
@@ -158,7 +188,7 @@ blockquote::after {
 
 .container-five {
     display: flex;
-    height: 350px;
+    min-height: 350px;
     justify-content: center;
     align-items: center;
 }
@@ -169,16 +199,16 @@ blockquote::after {
     background-color: rgb(72, 123, 233);
     border-radius: 5px;
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
-    gap: 300px;
+    overflow: hidden;
     color: white;
     font-weight: bold;  
 }
 
 .sign-up-bar > button {
     border: 1px white solid;
-    width: 100px;
+    min-width: 0;
 }
 
 .sign-up-bar > button:hover {
